fix mobile alignment

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,8 @@
 @media only screen and (max-width: 600px) {
-  body {
+  body, html {
        overflow: hidden;
+       position: relative;
+       height: 100%;
   }
   
   .homeText { 
